--- a/lib/i18n/it.i18n.yaml
+++ b/lib/i18n/it.i18n.yaml
@@ -50,6 +50,11 @@ home:
   selectAllNotes: Seleziona tutto
   deselectAllNotes: Deseleziona tutto
   deleteNote: Elimina nota
+  sortNames:
+    alphabetical: Alfabetico
+    lastModified: Ultima Modifica
+    sizeOnDisk: Dimensioni
+    increasing: Crescente
   renameFolder:
     renameFolder: Rinomina cartella
     folderName: Nome cartella
