--- a/lib/i18n/strings.i18n.yaml
+++ b/lib/i18n/strings.i18n.yaml
@@ -50,6 +50,11 @@ home:
   selectAllNotes: Select all
   deselectAllNotes: Deselect all
   deleteNote: Delete note
+  sortNames:
+    alphabetical: Alphabetical
+    lastModified: Last Modified
+    sizeOnDisk: Size
+    increasing: Increasing
   renameFolder:
     renameFolder: Rename folder
     folderName: Folder name
